api-mongo/k8s/nana-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nana-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nana-api
  template:
    metadata:
      labels:
        app: nana-api
    spec:
      containers:
        - name: nana-api
          image: nana-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
