api-mongo/k8s/nana-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nana-api-nodeport
spec:
  selector:
    app: nana-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
