api-mongo/k8s/nana-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nana-api
spec:
  selector:
    app: nana-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
