api-mongo/k8s/nana-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nana-mongodb
spec:
  selector:
    app: nana-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
