api-mongo/k8s/nana-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nana-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: eparviersolaize.freeddns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nana-api-service
                port:
                  number: 3000
